--- a/playground.html
+++ b/playground.html
@@ -31,6 +31,23 @@
   </head>
 
   <body>
+    <div
+      class="container align-item-center text-center text-black fw-bolder pt-5 mt-4"
+    >
+      <!-- General -->
+      <div class="row p-4">
+      <a href="#">
+        <div class="card">
+          <img
+            src="../images/persona/general.jpg"
+            class="card-img opacity-25"
+            alt="..."
+          />
+          <div class="card-img-overlay">
+            <h1 class="card-title pt-5">General</h1>
+            <p class="card-text">This is a wide.</p>
+          </div>
+        </a>
     <div class="container text-center align-item-center pt-5 px-5 py-3">
       <div class="p-2">
         <img
@@ -72,13 +89,22 @@
               />
             </div>
             <div class="col">Account Settings</div>
+      <!-- Specific -->
+      <div class="row p-4">
+        <a href="##">
+        <div class="card">
+          <img
+            src="../images/persona/specific.jpg"
+            class="card-img opacity-25"
+            alt="..."
+          />
+          <div class="card-img-overlay">
+            <h1 class="card-title pt-5">Specific</h1>
+            <p class="card-text">This is a wide.</p>
           </div>
-
-          <!-- Username  -->
-          <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input type="username" class="form-control" id="Username" />
-          </div>
+        </a>
+        </div>
+      </div>
 
           <!-- Email  -->
           <div class="mb-3">
@@ -164,11 +190,41 @@
               />
             </div>
             <div class="col">FAQ</div>
+      <!-- Creative -->
+      <div class="row p-4">
+        <a href="###">
+          <div class="card">
+            <img
+              src="../images/persona/creative.jpg"
+              class="card-img opacity-25"
+              alt="..."
+            />
+            <div class="card-img-overlay">
+              <h1 class="card-title pt-5">Creative</h1>
+              <p class="card-text">This is a wide.</p>
+            </div>
           </div>
+        </a>
+      </div>
 
-          <!-- Save button -->
-          <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+      <div class="text-center pt-4">
+        <button
+          type="button"
+          class="btn btn-primary btn"
+          onclick="window.location.href='/logout'"
+        >
+          LOGOUT
+        </button>
+      </div>
+
+      <div class="text-center pt-4">
+        <button
+          type="button"
+          class="btn btn-primary btn"
+          onclick="window.location.href='/logout'"
+        >
+          LOGOUT
+        </button>
       </div>
 
       <div class="text-center pt-4">
