--- a/playground.html
+++ b/playground.html
@@ -29,55 +29,58 @@
   </head>
 
   <body>
-    <!-- back button  -->
-    <div class="container-fluid">
-      <div class="row text-bg-primary pt-5 pb-4 px-3">
-        <div class="col-1">
-          <a href="history.back()">
-            <img
-              src="../images/icons/backarrow.png"
-              alt="back"
-              width="40px"
-              height="40px"
-            />
-          </a>
-        </div>
-        <div class="col text-center">
-          <h1>ACCOUNT SETTINGS</h1>
+    <div
+      class="container align-item-center text-center text-black fw-bolder pt-5 mt-4"
+    >
+      <!-- General -->
+      <div class="row p-4">
+      <a href="#">
+        <div class="card">
+          <img
+            src="../images/persona/general.jpg"
+            class="card-img opacity-25"
+            alt="..."
+          />
+          <div class="card-img-overlay">
+            <h1 class="card-title pt-5">General</h1>
+            <p class="card-text">This is a wide.</p>
+          </div>
+        </a>
         </div>
       </div>
-    </div>
 
-    <div class="container pt-4 px-5">
-      <div>
-        <form>
-          <!-- Name  -->
-          <div class="mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input type="name" class="form-control" id="name" />
+      <!-- Specific -->
+      <div class="row p-4">
+        <a href="##">
+        <div class="card">
+          <img
+            src="../images/persona/specific.jpg"
+            class="card-img opacity-25"
+            alt="..."
+          />
+          <div class="card-img-overlay">
+            <h1 class="card-title pt-5">Specific</h1>
+            <p class="card-text">This is a wide.</p>
           </div>
+        </a>
+        </div>
+      </div>
 
-          <!-- Username  -->
-          <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
-            <input type="username" class="form-control" id="Username" />
+      <!-- Creative -->
+      <div class="row p-4">
+        <a href="###">
+          <div class="card">
+            <img
+              src="../images/persona/creative.jpg"
+              class="card-img opacity-25"
+              alt="..."
+            />
+            <div class="card-img-overlay">
+              <h1 class="card-title pt-5">Creative</h1>
+              <p class="card-text">This is a wide.</p>
+            </div>
           </div>
-
-          <!-- Email  -->
-          <div class="mb-3">
-            <label for="email" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="email" />
-          </div>
-
-          <!-- Password  -->
-          <div class="mb-3 pb-4">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" />
-          </div>
-
-          <!-- Save button -->
-          <button type="submit" class="btn btn-primary">Save</button>
-        </form>
+        </a>
       </div>
     </div>
 
