--- a/playground.html
+++ b/playground.html
@@ -29,6 +29,23 @@
   </head>
 
   <body>
+    <div
+      class="container align-item-center text-center text-black fw-bolder pt-5 mt-4"
+    >
+      <!-- General -->
+      <div class="row p-4">
+      <a href="#">
+        <div class="card">
+          <img
+            src="../images/persona/general.jpg"
+            class="card-img opacity-25"
+            alt="..."
+          />
+          <div class="card-img-overlay">
+            <h1 class="card-title pt-5">General</h1>
+            <p class="card-text">This is a wide.</p>
+          </div>
+        </a>
     <div class="container text-center align-item-center pt-5 px-5 py-3">
     <div class="container text-center align-item-center pt-5 px-5 py-3">
       <div class="p-2">
@@ -38,13 +55,6 @@
           alt="userImage"
           class="p-2"
         />
-
-        <div>
-          <a href="">
-            <img src="../images/icons/edit.png" id="editicon" alt="" />
-            <span>Edit Profile</span>
-          </a>
-        </div>
 
         <div>
           <a href="">
@@ -184,73 +194,38 @@
                 height="20px"
                 alt=""
               />
-
-      <div class="card p-2">
-        <a href="######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/AboutUs.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">About Us</div>
-            <div class="col">About Us</div>
+      <!-- Specific -->
+      <div class="row p-4">
+        <a href="##">
+        <div class="card">
+          <img
+            src="../images/persona/specific.jpg"
+            class="card-img opacity-25"
+            alt="..."
+          />
+          <div class="card-img-overlay">
+            <h1 class="card-title pt-5">Specific</h1>
+            <p class="card-text">This is a wide.</p>
           </div>
         </a>
+        </div>
       </div>
 
-      <div class="card p-2">
-        <a href="#######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/FAQ.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/FAQ.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
+      <!-- Creative -->
+      <div class="row p-4">
+        <a href="###">
+          <div class="card">
+            <img
+              src="../images/persona/creative.jpg"
+              class="card-img opacity-25"
+              alt="..."
+            />
+            <div class="card-img-overlay">
+              <h1 class="card-title pt-5">Creative</h1>
+              <p class="card-text">This is a wide.</p>
             </div>
-            <div class="col">FAQ</div>
-            <div class="col">FAQ</div>
           </div>
         </a>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
-        </a>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
       </div>
     </div>
 
