--- a/playground.html
+++ b/playground.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Invsona</title>
     <link rel="icon" type="icon" href="../images/invsona.png" />
+    <title>Invsona</title>
 
     <!-- bootstrap morph theme -->
     <link
@@ -13,8 +13,8 @@
       href="https://bootswatch.com/5/morph/bootstrap.min.css"
     />
 
-    <!-- google font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Bootstrap jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- google icon -->
     <link
@@ -22,332 +22,47 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
 
-    <!-- custom css -->
+    <!--CSS files-->
+    <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/navbar.css" />
     <link rel="stylesheet" href="./styles/home.css" />
     <link rel="stylesheet" href="./styles/profile.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
   <body>
-    <div class="container text-center align-item-center pt-5 px-5 py-3">
-    <div class="container text-center align-item-center pt-5 px-5 py-3">
-      <div class="p-2">
-        <img
-          src="../images/cat_placeholder.png"
-          id="userImage"
-          alt="userImage"
-          class="p-2"
-        />
-
-        <div>
-          <a href="">
-            <img src="../images/icons/edit.png" id="editicon" alt="" />
-            <span>Edit Profile</span>
-          </a>
-        </div>
-
-        <div>
-          <a href="">
-            <img src="../images/icons/edit.png" id="editicon" alt="" />
-            <span>Edit Profile</span>
-          </a>
-        </div>
-      </div>
-      <h1>Name Placeholder</h1>
-    </div>
-
-    <!-- Menu -->
-
-    <div class="container px-4 align-item-center">
-      <div class="card p-2">
-        <a href="##">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Setting.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Account Settings</div>
-          </div>
-        </a>
-      </div>
-    <!-- Menu -->
-
-    <div class="container px-4 align-item-center">
-      <div class="card p-2">
-        <a href="##">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Setting.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Account Settings</div>
-          </div>
-        </a>
-      </div>
-
-      <!-- Creative -->
-      <div class="row p-4">
-        <a href="###">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/filter.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Filters</div>
-            <div class="col">Filters</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Savedpersona.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Savedpersona.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Saved Persona</div>
-            <div class="col">Saved Persona</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Saveddialogue.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Saved Dialogue</div>
-          </div>
-        </a>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#####">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/Saveddialogue.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">Saved Dialogue</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/AboutUs.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-
-      <div class="card p-2">
-        <a href="######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/AboutUs.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">About Us</div>
-            <div class="col">About Us</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/FAQ.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-        </a>
-      </div>
-
-      <div class="card p-2">
-        <a href="#######">
-          <div class="row">
-            <div class="col-2">
-              <img
-                src="../images/icons/FAQ.png"
-                width="20px"
-                height="20px"
-                alt=""
-              />
-            </div>
-            <div class="col">FAQ</div>
-            <div class="col">FAQ</div>
-          </div>
-        </a>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
+    <div>
+      <div class="container text-center align-item-center pt-5">
+        <form
+          action="upload_file.png"
+          method="post"
+          enctype="multipart/form-data"
         >
-          LOGOUT
-        </button>
-        </a>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
-        </a>
-      </div>
-
-      <div class="text-center pt-4">
-        <button
-          type="button"
-          class="btn btn-primary btn"
-          onclick="window.location.href='/logout'"
-        >
-          LOGOUT
-        </button>
+          <label for="file_to_upload">
+            <div
+              class="editUserImage"
+              style="background-image: url('../images/cat_placeholder.png')"
+            >
+              <span class="editicon"></span>
+              <span>Edit Profile Picture</span>
+            </div>
+            <div style="position: relative">
+              <span
+                class="editicon"
+                style="background-image: url('../images/icons/edit.png')"
+              ></span>
+            </div>
+          </label>
+          <input
+            type="file"
+            name="file_to_upload"
+            class="file_to_upload"
+            style="display: none"
+            onchange="this.form.submit()"
+          />
+        </form>
       </div>
     </div>
 
-    <!-- bottom nav bar  -->
-    <div
-      class="container text-center position-absolute bottom-0 start-50 translate-middle-x"
-      id="botnav"
-    >
-      <div class="row">
-        <div class="navbar border-success">
-          <!-- save  -->
-          <div class="icon col pt-3">
-            <a href="#">
-              <img
-                src="../images/icons/saved.png"
-                alt="saved"
-                width="30px"
-                height="30px"
-              />
-              <p>Saved</p>
-            </a>
-          </div>
-
-          <!-- persona -->
-          <div class="icon col pt-3">
-            <a href="#">
-              <img
-                src="../images/icons/persona.png"
-                alt="saved"
-                width="30px"
-                height="30px"
-              />
-              <p>Persona</p>
-            </a>
-          </div>
-
-          <!-- home -->
-          <div class="icon col pt-3">
-            <a href="#">
-              <img
-                src="../images/icons/home.png"
-                alt="saved"
-                width="30px"
-                height="30px"
-              />
-              <p>Home</p>
-            </a>
-          </div>
-
-          <!-- dialogue -->
-          <div class="icon col pt-3">
-            <a href="#">
-              <img
-                src="../images/icons/dialogue.png"
-                alt="saved"
-                width="30px"
-                height="30px"
-              />
-              <p>Dialogue</p>
-            </a>
-          </div>
-
-          <!-- profile -->
-          <div class="icon col pt-3">
-            <a href="#" class="">
-              <img
-                src="../images/icons/profile.png"
-                alt="saved"
-                width="30px"
-                height="30px"
-              />
-              <p>Profile</p>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
   </body>
 </html>
